teste do href, para o link

--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -4,7 +4,7 @@
             <hr class="white-line">
         </div>
         <div class="col-md-4 col-12 fila-1">
-            <a href="/" appScrollToTop><img src="../../../assets/icons/logo.png" alt="Logo" class="footer-logo"></a>
+            <a appScrollToTop><img src="../../../assets/icons/logo.png" alt="Logo" class="footer-logo"></a>
             <hr class="white-line-contact">
             <a><img src="../../../assets/icons/WhatsappLogo.png" alt="Whatsapp" srcset=""> Whatsapp</a>
             <b>+55 (11) 977331660</b>
@@ -15,15 +15,15 @@
         </div>
         <div class="col-md-4 col-12 fila-1">
             <h4 class="footer-heading">Quem Somos</h4>
-            <a class="text-color hover" href=""><p>Blog</p></a>
-            <a class="text-color hover" href="/quem-somos-nos"><p>Sobre nos</p></a>
-            <a class="text-color hover" href=""><p>Trabalhe conosco</p></a>
+            <a class="text-color hover" routerLink=""><p>Blog</p></a>
+            <a class="text-color hover" routerLink="/quem-somos-nos"><p>Sobre nos</p></a>
+            <a class="text-color hover" routerLink=""><p>Trabalhe conosco</p></a>
         </div>
         <div class="col-md-4 col-12 fila-1">
             <h4 class="footer-heading">Suporte</h4>
-            <a class="text-color hover" href=""><p>Central de ajuda</p></a>
-            <a class="text-color hover" href="/termos-condicoes"><p>Termos e condições</p></a>
-            <a class="text-color hover" href="/politicas-privacidade"><p>Política de privacidade</p></a>
+            <a class="text-color hover" routerLink=""><p>Central de ajuda</p></a>
+            <a class="text-color hover" routerLink="/termos-condicoes"><p>Termos e condições</p></a>
+            <a class="text-color hover" routerLink="/politicas-privacidade"><p>Política de privacidade</p></a>
         </div>
     </div>
 </div>
