--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -29,7 +29,7 @@
       <div class="ms-auto" *ngIf="loggedIn">
         <ul class="navbar-nav">
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               <img src="../../../assets/icons/Avatars.png" alt="perfil" width="30px" style="padding-bottom: 2px; margin-right: 1px;"> Perfil
             </a>
             <ul class="dropdown-menu dropdown-menu-end">
