alterando href para o routerlink

--- a/src/app/layout/account/authentication/authentication.component.html
+++ b/src/app/layout/account/authentication/authentication.component.html
@@ -1,4 +1,4 @@
-<a href="/"> <img
+<a routerLink="/"> <img
   src="../../../../assets/icons/logo.png"
   alt="logo"
   class="logo"
@@ -64,7 +64,7 @@
 
       <div class="div-criar-conta">
         <p>
-          Não tem uma conta? <a href="criar-conta" class="link"><b>Cadastre-se grátis aqui.</b></a>
+          Não tem uma conta? <a routerLink="criar-conta" class="link"><b>Cadastre-se grátis aqui.</b></a>
         </p>
       </div>
     </div>
