--- a/src/app/layout/account/create-account-company/create-account-company.component.html
+++ b/src/app/layout/account/create-account-company/create-account-company.component.html
@@ -1,4 +1,4 @@
-<a href="/"><img src="../../../../assets/icons/logo.png" alt="logo" class="logo" /></a>
+<a routerLink="/"><img src="../../../../assets/icons/logo.png" alt="logo" class="logo" /></a>
 <div class="container">
   <div class="div-logo"></div>
   <br />
@@ -113,7 +113,7 @@
             <div class="mb-4 mt-2 text-end">
               <p>
                 Já tem sua conta?
-                <a href="login" class="link cor-text"><b>Entrar em sua conta</b></a>
+                <a routerLink="login" class="link cor-text"><b>Entrar em sua conta</b></a>
               </p>
             </div>
           </div>
