--- a/src/app/layout/account/create-account/create-account.component.html
+++ b/src/app/layout/account/create-account/create-account.component.html
@@ -1,4 +1,4 @@
-  <a href="/"><img
+  <a routerLink="/"><img
     src="../../../../assets/icons/logo.png"
     alt="logo"
     class="logo"
@@ -44,7 +44,7 @@
               <div class="tem-conta mb-4">
                 <p style="color: #747474">
                   Ja tem sua conta?
-                  <a href="login" class="cor-text"><b>Entrar em sua conta</b></a>
+                  <a routerLink="login" class="cor-text"><b>Entrar em sua conta</b></a>
                 </p>
               </div>
             </div>
@@ -67,7 +67,7 @@
                     <div class="tem-conta mb-4">
                       <span style="color: #747474">
                         Você é uma empresa? 
-                        <a href="criar-conta-empresa" class="cor-text text-reset"
+                        <a routerLink="criar-conta-empresa" class="cor-text text-reset"
                           ><b>Cadastre-se grátis aqui.</b></a
                         >
                       </span>
