--- a/src/app/layout/home/home.component.html
+++ b/src/app/layout/home/home.component.html
@@ -16,7 +16,7 @@
           <h5 class="card-title text-decoration-underline"><b>Análise das Candidaturas</b></h5>
           <p class="card-text mt-4">Veja quem se candidatou às suas vagas e analise os perfis.</p>
           <p><b>Novas Candidaturas:</b> {{quantidadeNovasCandidaturas}}</p>
-          <a href="/vaga-empresa" class="btn btn-painel mt-4">Ver Candidaturas</a>
+          <a routerLink="/vaga-empresa" class="btn btn-painel mt-4">Ver Candidaturas</a>
         </div>
       </div>
     </div>
@@ -27,7 +27,7 @@
         <div class="card-body text-center">
           <h5 class="card-title text-decoration-underline"><b>Gerenciar Vagas</b></h5>
           <p class="card-text mt-4">Adicione novas vagas ou edite vagas existentes.</p>
-          <a href="/vaga-empresa" class="btn btn-painel mt-4">Gerenciar</a>
+          <a routerLink="/vaga-empresa" class="btn btn-painel mt-4">Gerenciar</a>
         </div>
       </div>
     </div>
