--- a/src/app/layout/navbar/navbar-search/navbar-search.component.html
+++ b/src/app/layout/navbar/navbar-search/navbar-search.component.html
@@ -2,7 +2,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-body-tertiary" data-bs-theme="dark">
   <div class="container-fluid">
     <!-- Logo e Toggler Button -->
-    <a class="navbar-brand" href="/">
+    <a class="navbar-brand" routerLink="/">
       <img src="../../../assets/icons/logo.png" alt="logo" />
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
@@ -43,7 +43,7 @@
         <div class="ms-auto" *ngIf="loggedIn">
           <ul class="navbar-nav">
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 <img src="../../../assets/icons/Avatars.png" alt="perfil" width="30px"
                   style="padding-bottom: 2px; margin-right: 5px;"> Perfil
               </a>
