--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary dark" data-bs-theme="dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/"><img src="../../../assets/icons/logo.png" alt="logo" /></a>
+    <a class="navbar-brand" routerLink="/"><img src="../../../assets/icons/logo.png" alt="logo" /></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
