--- a/src/app/layout/account/create-account-company/create-account-company.component.html
+++ b/src/app/layout/account/create-account-company/create-account-company.component.html
@@ -113,7 +113,7 @@
             <div class="mb-4 mt-2 text-end">
               <p>
                 Já tem sua conta?
-                <a routerLink="login" class="link cor-text"><b>Entrar em sua conta</b></a>
+                <a routerLink="/login" class="link cor-text"><b>Entrar em sua conta</b></a>
               </p>
             </div>
           </div>
