--- a/src/app/layout/navbar/navbar-search/navbar-search.component.html
+++ b/src/app/layout/navbar/navbar-search/navbar-search.component.html
@@ -38,7 +38,7 @@
       <!-- Profile Section -->
       <div class="col-lg-4 d-flex justify-content-end ms-auto">
         <div class="ms-auto" *ngIf="!loggedIn">
-          <button class="btn btn-color me-2" (click)="goToLogin()">Entrar</button>
+          <button class="btn btn-color btn-outline" (click)="goToLogin()">Entrar</button>
         </div>
         <div class="ms-auto" *ngIf="loggedIn">
           <ul class="navbar-nav">
