--- a/src/app/layout/navbar/navbar-search/navbar-search.component.css
+++ b/src/app/layout/navbar/navbar-search/navbar-search.component.css
@@ -41,3 +41,17 @@
 .search-button:hover {
   background-color: #dd7853;
 }
+/* Button Color */
+.btn-color {
+  background-color: #c16747;
+  color: white;
+  width: 100%;
+  border-radius: 10px;
+  padding: 0.5rem 1rem;
+  cursor: pointer;
+  transition: 0.5s all ease;
+}
+
+.btn-color:hover {
+  background-color: #dd7853;
+}
