Novas atualizações do frontend

--- a/src/app/layout/account/details-account/dialog/update/update-account/update-account.component.html
+++ b/src/app/layout/account/details-account/dialog/update/update-account/update-account.component.html
@@ -9,8 +9,8 @@
             <input type="text" class="form-control" placeholder="Nome Completo*" formControlName="nomeCompleto" required>
           </div>
           <div class="mb-2">
-            <label class="form-label">CEP</label>
-            <input type="text" class="form-control" placeholder="Cep*" formControlName="cep" required>
+            <label class="form-label">CPF</label>
+            <input type="number" class="form-control" placeholder="CPF*" formControlName="cpf" required>
           </div>
           <div class="mb-2">
             <label class="form-label">Usuário</label>
