--- a/src/app/layout/navbar/itens-navbar/quem-somos-nos/quem-somos-nos.component.html
+++ b/src/app/layout/navbar/itens-navbar/quem-somos-nos/quem-somos-nos.component.html
@@ -5,7 +5,7 @@
       <h1 class="display-4">Quem Somos Nós</h1>
       <p class="lead">Conectando Profissionais e Oportunidades</p>
       <hr class="my-4">
-      <img srcset="https://www.fundacaotelefonicavivo.org.br/wp-content/uploads/2022/06/voluntariado-no-brasil-1200px.jpg" alt="Company Image" width="600px" class="img-fluid rounded mb-4">
+      <img src="../../../../../assets/sobrenos.png" alt="Company Image" class="img-fluid rounded mb-4">
       <p class="text-muted">
         O UPS - Unidos para Servir é uma plataforma dedicada a conectar pessoas que desejam fazer a diferença através do trabalho voluntário. Acreditamos que, ao unir forças e compartilhar habilidades, podemos construir uma sociedade mais justa e solidária. Nossa missão é facilitar o encontro entre indivíduos com vontade de ajudar e organizações que necessitam de apoio para suas iniciativas sociais.
         Criamos um espaço simples e acessível para que qualquer pessoa, independentemente de experiência ou disponibilidade, possa encontrar oportunidades de contribuir positivamente para o mundo ao seu redor. No UPS, valorizamos o comprometimento, a empatia e a ação coletiva como pilares para transformar vidas e comunidades.
