alterações finais no frontend

--- a/src/app/layout/account/create-account/create-account.component.css
+++ b/src/app/layout/account/create-account/create-account.component.css
@@ -1,47 +1,58 @@
-.container {
-  display: flex;
-  flex-direction: column;
+.logo {
+  max-width: 150px;
+  height: auto;
+  margin-bottom: 20px;
 }
 
-.div-logo {
-  display: flex;
-  align-items: flex-start;
-  justify-content: start;
+@media (max-width: 768px) {
+  .logo {
+    max-width: 120px;
+  }
+
+  .caixa-branca {
+    padding: 15px;
+  }
+
+  .border-direita {
+    border-right: none; /* Remove a borda em telas pequenas */
+    border-bottom: 0.1px solid #747474; /* Adiciona borda inferior para dividir as seções */
+  }
 }
 
-.alinhar-centro {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+@media (max-width: 576px) {
+  .logo {
+    max-width: 100px;
+  }
 }
+
 .caixa-branca {
   background-color: white;
   border-radius: 10px;
   box-shadow: 1px 2px 5px black;
-  padding-top: 1%;
-  padding-bottom: 1%;
-}
-.border-direita {
-  border-right: #747474 solid 0.1px;
-}
-
-.vertical {
-  display: flex;
-  flex-direction: column;
+  padding: 30px;
 }
 
 .btn-color {
   background-color: #c16747;
   color: white;
-  width: 100%;
 }
+
 .cor-text {
-  text-decoration: none;
   color: #747474;
 }
+
 .login-button {
   border: 1px solid #b9b9b9;
-  width: 100%;
   color: #747474;
-  width: 360px;
+}
+
+@media (min-width: 992px) {
+  .caixa-branca {
+    padding: 50px;
+  }
+
+  .login-button {
+    width: 360px;
+    max-width: 100%;
+  }
 }
